--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 	<meta property="og:description" content="The Nezperdian hive-mind of chaos. Zalgo. Create Chaos and Horror with our Zalgo Generator." />
 	<meta property="og:image" content="https://www.zalgogenerator.com/images/ogimage.png" /> 
 
-	<link rel="stylesheet" href="/Users/Igor/Desktop/style/style.css" />
-	<link rel="shortcut icon" href="/favicon.ico" />
+	<link rel="stylesheet" href="/estesim/style/style.css" />
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	<script src="/Users/Igor/Desktop/scripts/scripts.js"></script>
+	<script src="/estesim/scripts/scripts.js"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-5528752-52"></script>
@@ -34,7 +33,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
 	<script>
 		window.addEventListener("load", function(){
-		window.cookieconsent.initialise({"location":true, "palette": {"popup": {"background": "#333333","text": "#777777"},"button": {"background": "#444444"}},"theme": "edgeless","content": {"message": "We use cookies to analyse our traffic and personalise ads. We also share information about your use of our site with these partners who may combine it with other information you’ve provided to them or they’ve collected from your use of their services."}})});
+		window.cookieconsent.initialise({"location":true, "palette": {"popup": {"background": "#333333","text": "#777777"},"button": {"background": "#444444"}},"theme": "edgeless","content": {"message": "We use cookies to analyse our traffic and personalise ads. We also share information about your use of our site with these partners who may combine it with other information youâ€™ve provided to them or theyâ€™ve collected from your use of their services."}})});
 	</script>
 
 	<!-- AutoAds -->
@@ -73,7 +72,7 @@ The Nezperdian hive-mind of chaos. <a href="#generator">Zalgo Generator</a>!</p>
 	<div id="textin" contenteditable="true" data-value="Enter your text here"></div>
 	<div id="options">
 		<div id="position">
-			<input id="up" name="" type="checkbox" checked="checked" /><label for="up" title="">u?°p</label>
+			<input id="up" name="" type="checkbox" checked="checked" /><label for="up" title="">u?Â°p</label>
 			<input id="middle" name="" type="checkbox" /><label for="middle" title="">m?iddle</label>
 			<input id="down" name="" type="checkbox" checked="checked" /><label for="down" title="">d???own</label>
 		</div>
@@ -98,4 +97,4 @@ The Nezperdian hive-mind of chaos. <a href="#generator">Zalgo Generator</a>!</p>
 		</script>
 	</div>
 </div>
-</body>
+</body>
